--- a/wordpress-widget.html
+++ b/wordpress-widget.html
@@ -46,51 +46,38 @@
     bottom: 104px;
     right: 24px;
     background: white;
-    padding: 12px 18px;
-    border-radius: 12px;
+    padding: 14px 20px;
+    border-radius: 20px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
     z-index: 999997;
     opacity: 0;
-    transform: translateY(10px);
+    transform: translateY(10px) scale(0.95);
     transition: all 0.3s ease;
     pointer-events: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 500;
     color: #333;
-    max-width: 200px;
+    cursor: pointer;
 }
 #chatkit-popup.show {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0) scale(1);
     pointer-events: auto;
+}
+#chatkit-popup:hover {
+    background: #f5f5f5;
 }
 #chatkit-popup::after {
     content: '';
     position: absolute;
-    bottom: -8px;
-    right: 30px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-top: 8px solid white;
-}
-#chatkit-popup-close {
-    position: absolute;
-    top: -8px;
-    right: -8px;
-    width: 20px;
-    height: 20px;
-    background: #133672;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    color: white;
-    line-height: 1;
+    bottom: -6px;
+    right: 32px;
+    width: 12px;
+    height: 12px;
+    background: white;
+    transform: rotate(45deg);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 /* Chat Window */
@@ -322,10 +309,7 @@
 </style>
 
 <!-- Popup Bubble -->
-<div id="chatkit-popup">
-    <button id="chatkit-popup-close">&times;</button>
-    How can I help?
-</div>
+<div id="chatkit-popup">How can I help?</div>
 
 <!-- Chat Button -->
 <button id="chatkit-button" aria-label="Open chat">
@@ -379,7 +363,6 @@
     const chatButton = document.getElementById('chatkit-button');
     const chatWindow = document.getElementById('chatkit-window');
     const chatPopup = document.getElementById('chatkit-popup');
-    const popupClose = document.getElementById('chatkit-popup-close');
     const chatInput = document.getElementById('chatkit-input');
     const chatSend = document.getElementById('chatkit-send');
     const messagesContainer = document.getElementById('chatkit-messages');
@@ -387,28 +370,19 @@
     const welcomeSuggestion = document.getElementById('chatkit-welcome-suggestion');
 
     let isOpen = false;
-    let popupDismissed = false;
     let popupShown = false;
 
     // Show popup after 5 seconds
     setTimeout(function() {
-        if (!isOpen && !popupDismissed && !popupShown) {
+        if (!isOpen && !popupShown) {
             chatPopup.classList.add('show');
             popupShown = true;
         }
     }, 5000);
 
-    // Close popup
-    popupClose.addEventListener('click', function(e) {
-        e.stopPropagation();
-        chatPopup.classList.remove('show');
-        popupDismissed = true;
-    });
-
     // Click popup to open chat
     chatPopup.addEventListener('click', function() {
         chatPopup.classList.remove('show');
-        popupDismissed = true;
         toggleChat();
     });
 
@@ -421,7 +395,6 @@
         // Hide popup when chat opens
         if (isOpen) {
             chatPopup.classList.remove('show');
-            popupDismissed = true;
         }
     }
 
