Fix placeholder text - AI assistant message

--- a/wordpress-widget.html
+++ b/wordpress-widget.html
@@ -426,10 +426,10 @@
         setTimeout(function() {
             const botMsg = document.createElement('div');
             botMsg.className = 'chatkit-message assistant';
-            botMsg.textContent = "Thanks for your message! I'm connecting to the Waterfield Tech team...";
+            botMsg.textContent = "I'm an AI assistant for Waterfield Tech. One moment while I process your request...";
             messagesContainer.appendChild(botMsg);
             messagesContainer.scrollTop = messagesContainer.scrollHeight;
-        }, 1000);
+        }, 500);
     }
 
     // Send on button click
