Add Vercel API endpoint for chat

--- a/wordpress-widget.html
+++ b/wordpress-widget.html
@@ -400,7 +400,7 @@
 
     chatButton.addEventListener('click', toggleChat);
 
-    const API_URL = 'https://website-chatkit-aa96p9yli-damianmathews-1710s-projects.vercel.app/';
+    const API_URL = 'https://website-chatkit-aa96p9yli-damianmathews-1710s-projects.vercel.app/api/chat';
 
     // Send message function
     async function sendMessage(text) {
