--- a/wordpress-widget.html
+++ b/wordpress-widget.html
@@ -207,7 +207,10 @@
     padding: 12px 16px;
     border-radius: 12px;
     font-size: 14px;
-    line-height: 1.5;
+    line-height: 1.6;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 .chatkit-message.user {
     background: #133672;
@@ -220,6 +223,13 @@
     color: white;
     align-self: flex-start;
     border-bottom-left-radius: 4px;
+}
+.chatkit-message a {
+    color: #60a5fa;
+    text-decoration: underline;
+}
+.chatkit-message strong {
+    font-weight: 600;
 }
 
 /* Input Area */
@@ -372,6 +382,20 @@
     let isOpen = false;
     let popupShown = false;
 
+    // Simple markdown to HTML converter
+    function parseMarkdown(text) {
+        return text
+            // Bold **text**
+            .replace(/\*\*(.+?)\*\*/g, '<strong>$1</strong>')
+            // Links [text](url)
+            .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank" rel="noopener">$1</a>')
+            // Numbered lists
+            .replace(/^\d+\.\s+/gm, '• ')
+            // Clean up extra whitespace
+            .replace(/\n{3,}/g, '\n\n')
+            .trim();
+    }
+
     // Show popup after 5 seconds
     setTimeout(function() {
         if (!isOpen && !popupShown) {
@@ -453,7 +477,8 @@
             // Add bot response
             const botMsg = document.createElement('div');
             botMsg.className = 'chatkit-message assistant';
-            botMsg.textContent = data.output_text || data.response || data.message || "I'm sorry, I couldn't process that request.";
+            const responseText = data.output_text || data.response || data.message || "I'm sorry, I couldn't process that request.";
+            botMsg.innerHTML = parseMarkdown(responseText);
             messagesContainer.appendChild(botMsg);
             messagesContainer.scrollTop = messagesContainer.scrollHeight;
 
