--- a/wordpress-widget.html
+++ b/wordpress-widget.html
@@ -210,7 +210,6 @@
     line-height: 1.6;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    white-space: pre-wrap;
 }
 .chatkit-message.user {
     background: #133672;
@@ -384,16 +383,16 @@
 
     // Simple markdown to HTML converter
     function parseMarkdown(text) {
-        return text
-            // Bold **text**
-            .replace(/\*\*(.+?)\*\*/g, '<strong>$1</strong>')
+        let html = text
+            // Bold **text** (non-greedy, handles across content)
+            .replace(/\*\*([^*]+)\*\*/g, '<strong>$1</strong>')
             // Links [text](url)
-            .replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank" rel="noopener">$1</a>')
-            // Numbered lists
-            .replace(/^\d+\.\s+/gm, '• ')
-            // Clean up extra whitespace
-            .replace(/\n{3,}/g, '\n\n')
-            .trim();
+            .replace(/\[([^\]]+)\]\((https?:\/\/[^)]+)\)/g, '<a href="$2" target="_blank" rel="noopener">$1</a>')
+            // Standalone URLs
+            .replace(/(^|[^"'])(https?:\/\/[^\s<]+)/g, '$1<a href="$2" target="_blank" rel="noopener">$2</a>')
+            // Line breaks
+            .replace(/\n/g, '<br>');
+        return html;
     }
 
     // Show popup after 5 seconds
