Fix send button SVG fill

--- a/wordpress-widget.html
+++ b/wordpress-widget.html
@@ -332,7 +332,7 @@
             </button>
             <input type="text" id="chatkit-input" placeholder="Ask anything..." />
             <button id="chatkit-send" aria-label="Send message">
-                <svg viewBox="0 0 24 24" fill="#133672"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
+                <svg viewBox="0 0 24 24"><path fill="#133672" d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
             </button>
         </div>
     </div>
