--- a/wordpress-widget.html
+++ b/wordpress-widget.html
@@ -155,7 +155,13 @@
     font-weight: 600;
     margin: 0 0 20px 0;
 }
-#chatkit-welcome-suggestion {
+#chatkit-suggestions {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-top: 10px;
+}
+.chatkit-suggestion {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -165,16 +171,16 @@
     color: rgba(255, 255, 255, 0.7);
     cursor: pointer;
     transition: background 0.2s;
-    margin: 0 auto;
-    max-width: 250px;
+    font-size: 14px;
 }
-#chatkit-welcome-suggestion:hover {
+.chatkit-suggestion:hover {
     background: rgba(255, 255, 255, 0.1);
 }
-#chatkit-welcome-suggestion svg {
-    width: 20px;
-    height: 20px;
+.chatkit-suggestion svg {
+    width: 18px;
+    height: 18px;
     fill: rgba(255, 255, 255, 0.5);
+    flex-shrink: 0;
 }
 
 /* Message Bubbles */
@@ -254,6 +260,34 @@
     transform: scale(1.05);
 }
 
+/* Typing Indicator */
+.chatkit-typing-dots {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding: 4px 0;
+}
+.chatkit-typing-dots span {
+    width: 8px;
+    height: 8px;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    animation: typingBounce 1.4s ease-in-out infinite;
+}
+.chatkit-typing-dots span:nth-child(1) { animation-delay: 0s; }
+.chatkit-typing-dots span:nth-child(2) { animation-delay: 0.2s; }
+.chatkit-typing-dots span:nth-child(3) { animation-delay: 0.4s; }
+@keyframes typingBounce {
+    0%, 60%, 100% {
+        transform: translateY(0);
+        opacity: 0.4;
+    }
+    30% {
+        transform: translateY(-6px);
+        opacity: 1;
+    }
+}
+
 /* Mobile Responsive */
 @media (max-width: 480px) {
     #chatkit-window {
@@ -302,9 +336,19 @@
     <div id="chatkit-messages">
         <div id="chatkit-welcome">
             <h2>How can I help you today?</h2>
-            <div id="chatkit-welcome-suggestion">
-                <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/></svg>
-                What can you do?
+            <div id="chatkit-suggestions">
+                <div class="chatkit-suggestion" data-prompt="Tell me about Applied AI solutions">
+                    <svg viewBox="0 0 24 24"><path d="M21 10.12h-6.78l2.74-2.82c-2.73-2.7-7.15-2.8-9.88-.1-2.73 2.71-2.73 7.08 0 9.79s7.15 2.71 9.88 0C18.32 15.65 19 14.08 19 12.1h2c0 1.98-.88 4.55-2.64 6.29-3.51 3.48-9.21 3.48-12.72 0-3.5-3.47-3.5-9.12 0-12.6 3.51-3.47 9.14-3.47 12.65 0L21 3v7.12zM12.5 8v4.25l3.5 2.08-.72 1.21L11 13V8h1.5z"/></svg>
+                    Tell me about Applied AI solutions
+                </div>
+                <div class="chatkit-suggestion" data-prompt="What is CX Modernization?">
+                    <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
+                    What is CX Modernization?
+                </div>
+                <div class="chatkit-suggestion" data-prompt="How can you help with cloud migration?">
+                    <svg viewBox="0 0 24 24"><path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"/></svg>
+                    How can you help with cloud migration?
+                </div>
             </div>
         </div>
     </div>
@@ -325,7 +369,7 @@
     const chatSend = document.getElementById('chatkit-send');
     const messagesContainer = document.getElementById('chatkit-messages');
     const welcomeSection = document.getElementById('chatkit-welcome');
-    const welcomeSuggestion = document.getElementById('chatkit-welcome-suggestion');
+    const suggestions = document.querySelectorAll('.chatkit-suggestion');
 
     let isOpen = false;
     let popupShown = false;
@@ -399,7 +443,7 @@
         const typingMsg = document.createElement('div');
         typingMsg.className = 'chatkit-message assistant';
         typingMsg.id = 'chatkit-typing';
-        typingMsg.textContent = 'Thinking...';
+        typingMsg.innerHTML = '<div class="chatkit-typing-dots"><span></span><span></span><span></span></div>';
         messagesContainer.appendChild(typingMsg);
         messagesContainer.scrollTop = messagesContainer.scrollHeight;
 
@@ -456,9 +500,12 @@
         }
     });
 
-    // Welcome suggestion click
-    welcomeSuggestion.addEventListener('click', function() {
-        sendMessage('What can you do?');
+    // Welcome suggestion clicks
+    suggestions.forEach(function(suggestion) {
+        suggestion.addEventListener('click', function() {
+            const prompt = this.getAttribute('data-prompt');
+            sendMessage(prompt);
+        });
     });
 })();
 </script>
